enterprise/operator/pkg/lb/testdata/lbfrontend_translation/12-https-h11-and-h2/input-lbbackend-1.yaml
apiVersion: isovalent.com/v1alpha1
kind: LBBackend
metadata:
  namespace: default
  name: lb-1
spec:
  addresses:
    - ip: 172.18.0.5
      port: 8080
    - ip: 172.18.0.6
      port: 8080
  healthCheck:
    intervalSeconds: 30
    timeoutSeconds: 5
    healthyThreshold: 1
    unhealthyThreshold: 1
    http:
      host: lb
      path: /healthz
