enterprise/operator/pkg/lb/testdata/lbfrontend_translation/12-https-h11-and-h2/input-lbfrontend.yaml
apiVersion: isovalent.com/v1alpha1
kind: LBFrontend
metadata:
  namespace: default
  name: lb-1
spec:
  vipRef:
    name: lb-1
  port: 80
  applications:
    httpsProxy:
      httpConfig:
        enableHTTP11: true
        enableHTTP2: true
      tlsConfig:
        certificates:
          - secretName: "test"
      routes:
        - match:
            hostNames:
              - "foo.acme.io"
          backendRef:
            name: lb-1
